k8s/reverse-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
  namespace: deploydude
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
      - name: reverse-proxy
        image: reverse-proxy:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: http
