k8s/api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: deploydude
spec:
  type: NodePort
  selector:
    app: api-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: socket
    port: 9001
    targetPort: 9001
