k8s/reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: deploydude
spec:
  type: ClusterIP
  selector:
    app: reverse-proxy
  ports:
  - name: http
    port: 8000
    targetPort: 8000
